# consus

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  _b64_part0.txt  _gen.py  _test_hd.txt  _thrift_writer.py  _tw.b64  _w.py  _write_files.py  backlog.md  check_markers.py  checklist.md  gap_audit.md  gen_decode.py  gen_parallel.py  insert_parallel_impl.py  parallel_block.rs  rust_lines_phase1.txt  test_chunk.txt  test_chunk2.txt  test_write.txt  update_artifacts.py  write_decode.py
crates/consus/: Cargo.toml
crates/consus-arrow/: Cargo.toml
crates/consus-arrow/benches/: arrow_bridge.rs
crates/consus-arrow/src/: lib.rs
crates/consus-arrow/src/array/: materialize.rs  mod.rs
crates/consus-arrow/src/bridge/: mod.rs
crates/consus-arrow/src/compute/: mod.rs
crates/consus-arrow/src/conversion/: mod.rs
crates/consus-arrow/src/datatype/: mod.rs
crates/consus-arrow/src/field/: mod.rs
crates/consus-arrow/src/ipc/: mod.rs
crates/consus-arrow/src/memory/: mod.rs
crates/consus-arrow/src/schema/: mod.rs
crates/consus-arrow/tests/: integration_tests.rs  parquet_arrow_e2e.rs
crates/consus-compression/: Cargo.toml
crates/consus-compression/src/: lib.rs  registry.rs
crates/consus-compression/src/checksum/: crc32.rs  fletcher32.rs  lookup3.rs  mod.rs  traits.rs
crates/consus-compression/src/chunking/: index.rs  iterator.rs  mod.rs
crates/consus-compression/src/codec/: blosc.rs  deflate.rs  gzip.rs  lz4.rs  mod.rs  szip.rs  traits.rs  zstd.rs
crates/consus-compression/src/codecs/: deflate.rs  lz4_codec.rs  mod.rs  zstd_codec.rs
crates/consus-compression/src/endian/: conversion.rs  mod.rs
crates/consus-compression/src/pipeline/: executor.rs  mod.rs  nbit.rs  shuffle.rs  traits.rs
crates/consus-compression/src/registry/: default.rs  mod.rs
crates/consus-compression/src/serialization/: mod.rs  primitives.rs
crates/consus-compression/tests/: property_codec.proptest-regressions  unit_checksum.rs  unit_codec_roundtrip.rs  unit_pipeline.rs  unit_registry.rs
crates/consus-compression/tests/fixtures/: mod.rs
crates/consus-core/: Cargo.toml
crates/consus-core/src/: datatype.rs  dimension.rs  error.rs  lib.rs  metadata.rs  selection.rs  storage.rs
crates/consus-core/src/core/: error.rs  mod.rs  traits.rs
crates/consus-core/src/types/: attribute.rs  datatype.rs  dimension.rs  mod.rs  node.rs  reference.rs  selection.rs
crates/consus-core/tests/: canonical_types.rs  property_core.rs  property_datatype.proptest-regressions  property_datatype.rs  unit_compression.rs  unit_datatype.rs  unit_shape_selection.rs
crates/consus-fits/: Cargo.toml
crates/consus-fits/src/: lib.rs
crates/consus-fits/src/card/: mod.rs
crates/consus-fits/src/datastructure/: mod.rs
crates/consus-fits/src/file/: mod.rs
crates/consus-fits/src/fits/: format.rs  mod.rs
crates/consus-fits/src/hdu/: mod.rs
crates/consus-fits/src/header/: card.rs  keyword.rs  mod.rs  parser.rs  value.rs
crates/consus-fits/src/image/: mod.rs
crates/consus-fits/src/table/: decode.rs  mod.rs
crates/consus-fits/src/types/: format.rs  mod.rs
crates/consus-fits/src/validation/: mod.rs
crates/consus-fits/tests/: fits_file_roundtrip.rs
crates/consus-hdf5/: Cargo.toml  diag_output.h5
crates/consus-hdf5/benches/: hdf5_read.rs
crates/consus-hdf5/src/: address.rs  btree.rs  constants.rs  dataset.rs  dataspace.rs  datatype_map.rs  file.rs  group.rs  heap.rs  lib.rs  object_header.rs  primitives.rs  superblock.rs
crates/consus-hdf5/src/btree/: mod.rs  (+2 more)
crates/consus-hdf5/tests/: async_hdf5.rs  hdump_verify.rs  integration.rs  integration_h5py_datasets.rs  integration_hdf5_group_ref.rs  integration_hdf5_string_ref.rs  integration_large_file.rs  property_hdf5.proptest-regressions  property_hdf5.rs  reference_hdf_group.rs  roundtrip_consus_to_h5py.rs  roundtrip_h5py_to_consus.rs  roundtrip_hdf5.rs
crates/consus-hdmf/: Cargo.toml
crates/consus-hdmf/src/: lib.rs  storage.rs  table.rs
crates/consus-hdmf/tests/: integration.rs
crates/consus-io/: Cargo.toml
crates/consus-io/src/: async_source.rs  cursor.rs  lib.rs  source.rs
crates/consus-io/tests/: property_io.proptest-regressions  property_io.rs  s3_rusoto_moirai_differential.rs  unit_async_io.rs  unit_mem_cursor.rs  unit_mmap.rs  unit_sync_io.rs
crates/consus-mat/: Cargo.toml  README.md
crates/consus-mat/src/: detect.rs  error.rs  lib.rs
crates/consus-mat/tests/: roundtrip_scipy_to_consus.rs  test_v4.mat  test_v5.mat  v4_read.rs  v5_compressed_read.rs  v5_read.rs  v73_read.rs
crates/consus-netcdf/: Cargo.toml
crates/consus-netcdf/src/: conventions.rs  dimension.rs  lib.rs  variable.rs
crates/consus-netcdf/tests/: integration_netcdf_hdf5.rs  integration_unidata_reference.rs  reference_netcdf.rs  roundtrip_netcdf.rs  unit_netcdf_core.rs  write_netcdf_hdf5.rs
crates/consus-npy/: Cargo.toml
crates/consus-npy/src/: array.rs  error.rs  format.rs  lib.rs  npz.rs
crates/consus-nwb/: Cargo.toml  README.md
crates/consus-nwb/src/: lib.rs
crates/consus-nwb/tests/: integration_real_file.rs  roundtrip_proptest.rs
crates/consus-onnx/: Cargo.toml
crates/consus-onnx/src/: document.rs  lib.rs  parse.rs  wire.rs
crates/consus-parquet/: Cargo.toml  gen_dataset.py
crates/consus-parquet/benches/: parquet_rw.rs
crates/consus-parquet/src/: lib.rs  schema_map.rs
crates/consus-python/: Cargo.toml  README.md  pyproject.toml
crates/consus-python/src/: dtype.rs  error.rs  hdf5.rs  hdmf.rs  lib.rs  mat.rs  netcdf.rs  parquet.rs  zarr.rs
crates/consus-zarr/: Cargo.toml
crates/consus-zarr/src/: chunk.rs  lib.rs  metadata.rs  store.rs
crates/consus-zarr/tests/: property_zarr.proptest-regressions  property_zarr.rs  reference_zarr_spec.rs  roundtrip_zarr.rs  unit_chunk_io.rs  unit_metadata_v2.rs  unit_metadata_v3.rs  unit_store_operations.rs
crates/consus/src/: lib.rs
crates/consus/tests/: integration_hybrid.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_hdf5_parser.rs  fuzz_mat_reader.rs  fuzz_parquet_decoder.rs
tests/: Cargo.toml  README.md  cross_format_interop.rs  end_to_end_reference.rs  property_integration.rs
(+189 files in other folders)
