[workspace]
resolver = "2"
members = [
    "crates/consus",
    "crates/consus-core",
    "crates/consus-hdf5",
    "crates/consus-fits",
    "crates/consus-zarr",
    "crates/consus-netcdf",
    "crates/consus-parquet",
    "crates/consus-arrow",
    "crates/consus-compression",
    "crates/consus-io",
    "tests",
    "crates/consus-mat",
    "crates/consus-nwb",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryancinsight/consus"
homepage = "https://github.com/ryancinsight/consus"
keywords = ["hdf5", "zarr", "netcdf", "scientific-computing", "storage"]
categories = ["science", "filesystem", "encoding", "no-std"]
description = "Pure-Rust, no_std-compatible, memory-safe hierarchical and array-oriented storage formats"

[workspace.dependencies]
# Internal crates
consus-mat = { path = "crates/consus-mat", version = "0.1.0", default-features = false }
consus-nwb = { path = "crates/consus-nwb", version = "0.1.0", default-features = false }
consus-core = { path = "crates/consus-core", version = "0.1.0", default-features = false }
consus-hdf5 = { path = "crates/consus-hdf5", version = "0.1.0", default-features = false }
consus-fits = { path = "crates/consus-fits", version = "0.1.0", default-features = false }
consus-zarr = { path = "crates/consus-zarr", version = "0.1.0", default-features = false }
consus-netcdf = { path = "crates/consus-netcdf", version = "0.1.0", default-features = false }
consus-parquet = { path = "crates/consus-parquet", version = "0.1.0", default-features = false }
consus-arrow = { path = "crates/consus-arrow", version = "0.1.0", default-features = false }
consus-compression = { path = "crates/consus-compression", version = "0.1.0", default-features = false }
consus-io = { path = "crates/consus-io", version = "0.1.0", default-features = false }

# External dependencies
thiserror = { version = "2", default-features = false }
bytes = { version = "1", default-features = false }
smallvec = { version = "1", default-features = false }
zerocopy = { version = "0.8", default-features = false }
byteorder = { version = "1", default-features = false }
memmap2      = { version = "0.9" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
rusoto_core = { version = "0.48", default-features = false, features = ["native-tls"] }
rusoto_s3 = { version = "0.48", default-features = false, features = ["native-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# Compression (optional)
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zstd = { version = "0.13", default-features = false }
lz4_flex = { version = "0.11", default-features = false }

# Async (optional)
tokio = { version = "1", default-features = false, features = ["io-util", "fs"] }
futures-core = { version = "0.3", default-features = false }

# Parallelism (optional)
rayon = { version = "1" }

# Testing
proptest = { version = "1" }
criterion = { version = "0.5" }
tempfile = { version = "3" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
