[package]
name = "consus-arrow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Arrow interoperability layer for the Consus scientific storage library"

[features]
default = ["std"]
std = ["alloc", "consus-core/std", "consus-parquet/std"]
alloc = ["consus-core/alloc", "consus-parquet/alloc"]

[dependencies]
consus-core = { workspace = true }
consus-parquet = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
