[package]
name = "consus-fits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure-Rust FITS format implementation for the Consus scientific storage library"

[features]
default = ["std"]
std = ["alloc", "consus-core/std", "consus-io/std", "consus-compression/std"]
alloc = ["consus-core/alloc", "consus-io/alloc", "consus-compression/alloc"]

[dependencies]
consus-core = { workspace = true }
consus-io = { workspace = true }
consus-compression = { workspace = true }

[package.metadata.docs.rs]
all-features = true
