[package]
name = "consus-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync and async I/O abstractions for the Consus scientific storage library"

[features]
default = ["std"]
std = ["consus-core/std"]
alloc = ["consus-core/alloc"]
async-io = ["dep:tokio", "dep:futures-core", "std"]
mmap = ["dep:memmap2", "std"]

[dependencies]
consus-core = { workspace = true }
tokio = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = { workspace = true }

[[test]]
name = "property_io"
path = "tests/property_io.rs"
required-features = ["alloc"]

[[test]]
name = "unit_sync_io"
path = "tests/unit_sync_io.rs"
required-features = ["alloc"]

[[test]]
name = "unit_mem_cursor"
path = "tests/unit_mem_cursor.rs"
required-features = ["alloc"]

[[test]]
name = "unit_mmap"
path = "tests/unit_mmap.rs"
required-features = ["mmap"]
