[package]
name = "consus-parquet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Apache Parquet interoperability layer for the Consus scientific storage library"

[features]
default = ["std"]
std = ["alloc", "consus-core/std"]
alloc = ["consus-core/alloc"]
snappy = ["dep:snap"]
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
gzip = ["dep:flate2", "std"]

[dependencies]
consus-core = { workspace = true }
snap = { version = "1", default-features = false, optional = true }
zstd = { workspace = true, optional = true }
lz4_flex = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parquet_rw"
harness = false
