[package]
name = "consus-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "consus"
crate-type = ["cdylib"]

[dependencies]
consus-core = { workspace = true, features = ["std"] }
consus-hdf5 = { workspace = true, features = ["std", "deflate"] }
consus-io = { workspace = true, features = ["std"] }
consus-mat = { workspace = true, features = ["std", "compress", "v73"] }
consus-netcdf = { workspace = true, features = ["std"] }
consus-zarr = { workspace = true, features = ["std"] }
consus-parquet = { workspace = true, features = ["std", "snappy"] }
consus-hdmf = { workspace = true, features = ["std"] }
pyo3 = { workspace = true, features = ["extension-module"] }
serde_json = { workspace = true }
