[package]
name = "consus-python"
version.workspace = true
# Pinned to 2021 (not the workspace's 2024): PyO3 0.22's `#[pymethods]`/
# `#[pyfunction]` macro expansion is not compatible with edition 2024's
# deny-by-default `unsafe_op_in_unsafe_fn` (yields E0133). Revisit on a PyO3 upgrade.
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "consus"
crate-type = ["cdylib"]
doc = false

[dependencies]
consus-core = { workspace = true, features = ["std"] }
consus-hdf5 = { workspace = true, features = ["std", "deflate"] }
consus-io = { workspace = true, features = ["std"] }
consus-mat = { workspace = true, features = ["std", "compress", "v73"] }
consus-netcdf = { workspace = true, features = ["std"] }
consus-zarr = { workspace = true, features = ["std"] }
consus-parquet = { workspace = true, features = ["std", "snappy"] }
consus-hdmf = { workspace = true, features = ["std"] }
pyo3 = { workspace = true, features = ["extension-module"] }
serde_json = { workspace = true }
