[package]
name = "consus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[features]
default = ["std", "hdf5", "fits", "deflate"]
std = [
    "alloc",
    "consus-core/std",
    "consus-io/std",
    "consus-compression/std",
    "consus-hdf5?/std",
    "consus-zarr?/std",
    "consus-netcdf?/std",
    "consus-parquet?/std",
    "consus-arrow?/std",
    "consus-fits?/std",
]
alloc = [
    "consus-core/alloc",
    "consus-io/alloc",
    "consus-compression/alloc",
    "consus-hdf5?/alloc",
    "consus-zarr?/alloc",
    "consus-netcdf?/alloc",
    "consus-parquet?/alloc",
    "consus-arrow?/alloc",
    "consus-fits?/alloc",
]

# Format backends
hdf5 = ["dep:consus-hdf5"]
zarr = ["dep:consus-zarr"]
netcdf = ["dep:consus-netcdf"]
parquet = ["dep:consus-parquet"]
arrow = ["dep:consus-arrow"]
fits = ["dep:consus-fits"]

# Compression codecs
deflate = ["consus-compression/deflate"]
zstd = ["consus-compression/zstd"]
lz4 = ["consus-compression/lz4"]

# Async I/O
async-io = ["consus-io/async-io"]

[dependencies]
consus-core = { workspace = true }
consus-io = { workspace = true }
consus-compression = { workspace = true }
consus-hdf5 = { workspace = true, optional = true }
consus-zarr = { workspace = true, optional = true }
consus-netcdf = { workspace = true, optional = true }
consus-parquet = { workspace = true, optional = true }
consus-arrow = { workspace = true, optional = true }
consus-fits = { workspace = true, optional = true }
rayon = { workspace = true }

[package.metadata.docs.rs]
all-features = true
